// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render 1`] = `
<div
  className="picker"
>
  <Month
    disabled={Array []}
    focused={null}
    key="5/2018"
    month={5}
    onDateFocus={[Function]}
    onDateSelect={[Function]}
    selected={null}
    year={2018}
  >
    <Jumper
      hasNext={true}
      hasPrev={true}
      month={5}
      offset={0}
      onJump={[Function]}
      year={2018}
    />
  </Month>
</div>
`;

exports[`render should render children 1`] = `
<div
  className="picker"
>
  <Month
    disabled={Array []}
    focused={null}
    key="5/2018"
    month={5}
    onDateFocus={[Function]}
    onDateSelect={[Function]}
    selected={null}
    year={2018}
  >
    <Jumper
      hasNext={true}
      hasPrev={true}
      month={5}
      offset={0}
      onJump={[Function]}
      year={2018}
    />
  </Month>
  <span
    className="test-child"
  >
    foo
  </span>
</div>
`;

exports[`render should render value 1`] = `
<div
  className="picker"
>
  <Month
    disabled={Array []}
    focused={null}
    key="5/2018"
    month={5}
    onDateFocus={[Function]}
    onDateSelect={[Function]}
    selected={
      Object {
        "from": 5,
        "to": 5,
      }
    }
    year={2018}
  >
    <Jumper
      hasNext={false}
      hasPrev={true}
      month={5}
      offset={0}
      onJump={[Function]}
      year={2018}
    />
  </Month>
  <Month
    disabled={Array []}
    focused={null}
    key="6/2018"
    month={6}
    onDateFocus={[Function]}
    onDateSelect={[Function]}
    selected={null}
    year={2018}
  >
    <Jumper
      hasNext={true}
      hasPrev={false}
      month={6}
      offset={1}
      onJump={[Function]}
      year={2018}
    />
  </Month>
  <span
    className="test-child"
  >
    foo
  </span>
</div>
`;

exports[`render should render value range (start/end) 1`] = `
<div
  className="picker"
>
  <Month
    disabled={Array []}
    focused={null}
    key="5/2018"
    month={5}
    onDateFocus={[Function]}
    onDateSelect={[Function]}
    selected={
      Object {
        "from": 5,
        "to": 7,
      }
    }
    year={2018}
  >
    <Jumper
      hasNext={false}
      hasPrev={true}
      month={5}
      offset={0}
      onJump={[Function]}
      year={2018}
    />
  </Month>
  <Month
    disabled={Array []}
    focused={null}
    key="6/2018"
    month={6}
    onDateFocus={[Function]}
    onDateSelect={[Function]}
    selected={null}
    year={2018}
  >
    <Jumper
      hasNext={true}
      hasPrev={false}
      month={6}
      offset={1}
      onJump={[Function]}
      year={2018}
    />
  </Month>
  <span
    className="test-child"
  >
    foo
  </span>
</div>
`;

exports[`render should render value range (start/end) 2`] = `
<div
  className="picker"
>
  <Month
    disabled={Array []}
    focused={null}
    key="5/2018"
    month={5}
    onDateFocus={[Function]}
    onDateSelect={[Function]}
    selected={
      Object {
        "from": 5,
        "to": 7,
      }
    }
    year={2018}
  >
    <Jumper
      hasNext={false}
      hasPrev={true}
      month={5}
      offset={0}
      onJump={[Function]}
      year={2018}
    />
  </Month>
  <Month
    disabled={Array []}
    focused={null}
    key="6/2018"
    month={6}
    onDateFocus={[Function]}
    onDateSelect={[Function]}
    selected={null}
    year={2018}
  >
    <Jumper
      hasNext={true}
      hasPrev={false}
      month={6}
      offset={1}
      onJump={[Function]}
      year={2018}
    />
  </Month>
  <span
    className="test-child"
  >
    foo
  </span>
</div>
`;
